# snake-game

./: Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: main.rs
game/: Cargo.toml
game/src/: apple.rs  aux.rs  error.rs  grid.rs  lib.rs  snake.rs
logger/: Cargo.toml
logger/src/: lib.rs
server/: Cargo.toml
server/src/: game.rs  lib.rs  server.rs
src/: game.rs  lib.rs  server.rs
