[package]
name = "snake_game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = "2"
iced = { version = "0.3", features = ["debug", "canvas", "tokio"] }
iced_futures = "0.3"
tokio = { version = "1.14", features = ["net", "io-util", "full"] }
iced_native = "0.4.0"
