[package]
name = "snake_game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = "2"
eframe = "0.15.0"
rand = "0.8.4"
humantime = "2.1.0"
