[package]
name = "snake_game"
publish = false
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = "2"
rand = "0.8"
humantime = "2.1"
env_logger = "0.9"
log = "0.4"
rand_derive2 = "0.1.17"
