[package]
name = "server"
publish = false
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../game" }
logger = { path = "../logger" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = "2"
humantime = "2.1"
